--- a/colombia-back-to-school.html
+++ b/colombia-back-to-school.html
@@ -411,7 +411,7 @@
                                             </div>
                                             <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="https://www.capitalcolombia.com/articulo/wacom_colombia" target="_blank"><img class="img-responsive" src="img/logos-col/capitalcol.jpg" width="100" style="margin:auto; display: flex; margin-top: 12%;"></a>
+                                                    <a href="https://www.capitalcolombia.com/clases/colombia/bogota/hardware/tablas_digitalizadoras_wacom_cc2c.php" target="_blank"><img class="img-responsive" src="img/logos-col/capitalcol.jpg" width="100" style="margin:auto; display: flex; margin-top: 12%;"></a>
                                                 </div>
                                             </div>
                                             <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
