--- a/brasil-back-to-school.html
+++ b/brasil-back-to-school.html
@@ -295,7 +295,7 @@
                                         </div>
                                         <div class="col-lg-5 col-sm-8 col-xs-12 left mb-sm" style="margin-top: 30px;">
                                             <div class="col-lg-3 col-md-3 col-sm-12 col-lg-offset-6 col-md-offset-6 col-sm-offset-3" style="width: 120px; height: 120px; background-color: #0088cc; border-radius: 100%; padding: 20px; position: absolute; z-index:5;">
-                                                <h6 style="color:white; font-size: 17px; text-align: center; margin:auto; position: relative; padding-top: 15px;">Descontos de até 20%</h6>
+                                                <h6 style="color:white; font-size: 17px; text-align: center; margin:auto; position: relative; padding-top: 15px;">Descontos de até 25%</h6>
                                             </div>
                                             <img src="img/products/intuos-pro.png" style="max-width: 95%;"/>
                                         </div>
@@ -313,7 +313,7 @@
                                             <img src="img/wacom-intuos.png" style="max-width: 100%;" />
                                             <h3></h3>
                                             <h3>
-                                            Destaque a sua criatividade com a linha Intuos. Inclua a tecnologia pioneira de tablet e caneta da Wacom, download de software criativo para desenho (gratuito, mediante a compra do tablet Wacom), além de cursos online de treinamento. Independente se a sua motivação é começar o seu próprio protfólio, angariar "likes" ou exceder os limites da criatividade, a linha Intuos tem tudo o que você precisa para tornar as suas aspirações realidade.
+                                            Destaque a sua criatividade com a linha Intuos. Inclua a tecnologia pioneira de tablet e caneta da Wacom, download de software criativo para desenho (gratuito, mediante a compra do tablet Wacom), além de cursos online de treinamento. Independente se a sua motivação é começar o seu próprio portfólio, angariar "likes" ou exceder os limites da criatividade, a linha Intuos tem tudo o que você precisa para tornar as suas aspirações realidade.
                                             </h3>
                                             <h3><a class="link" href="https://www.wacom.com/es-es/products/pen-tablets/wacom-intuos" target="_blank">Explore Wacom Intuos <img src="img/arrow-n.png"></a></h3>
                                             <span style="font-size:26px;">
@@ -323,7 +323,7 @@
                                         </div>
                                         <div class="col-lg-5 col-sm-8 col-xs-12 left mb-sm" style="margin-top: 30px;">
                                             <div class="col-lg-3 col-md-3 col-sm-12 col-lg-offset-6 col-md-offset-6 col-sm-offset-3" style="width: 120px; height: 120px; background-color: #0088cc; border-radius: 100%; padding: 20px; position: absolute; z-index:5;">
-                                                <h6 style="color:white; font-size: 17px; text-align: center; margin:auto; position: relative; padding-top: 15px;">Descontos de até 20%</h6>
+                                                <h6 style="color:white; font-size: 17px; text-align: center; margin:auto; position: relative; padding-top: 15px;">Descontos de até 25%</h6>
                                             </div>
                                             <img src="img/products/intuos.png" style="max-width: 95%;"/>
                                         </div>
@@ -351,7 +351,7 @@
                                         </div>
                                         <div class="col-lg-5 col-sm-8 col-xs-12 left mb-sm" style="margin-top: 30px;">
                                             <div class="col-lg-3 col-md-3 col-sm-12 col-lg-offset-6 col-md-offset-6 col-sm-offset-3" style="width: 120px; height: 120px; background-color: #0088cc; border-radius: 100%; padding: 20px; position: absolute; z-index:5;">
-                                                <h6 style="color:white; font-size: 17px; text-align: center; margin:auto; position: relative; padding-top: 15px;">Descontos de até 20%</h6>
+                                                <h6 style="color:white; font-size: 17px; text-align: center; margin:auto; position: relative; padding-top: 15px;">Descontos de até 25%</h6>
                                             </div>
                                             <img src="img/products/cintiq-pro.png" style="max-width: 95%;"/>
                                         </div>
@@ -379,7 +379,7 @@
                                         </div>
                                         <div class="col-lg-5 col-sm-8 col-xs-12 left mb-sm" style="margin-top: 30px;">
                                             <div class="col-lg-3 col-md-3 col-sm-12 col-lg-offset-6 col-md-offset-6 col-sm-offset-3" style="width: 120px; height: 120px; background-color: #0088cc; border-radius: 100%; padding: 20px; position: absolute; z-index:5;">
-                                                <h6 style="color:white; font-size: 17px; text-align: center; margin:auto; position: relative; padding-top: 15px;">Descontos de até 20%</h6>
+                                                <h6 style="color:white; font-size: 17px; text-align: center; margin:auto; position: relative; padding-top: 15px;">Descontos de até 25%</h6>
                                             </div>
                                             <img src="img/products/wacom-one.png" style="max-width: 95%;"/>
                                         </div>
@@ -508,6 +508,11 @@
                                             <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas d-none d-sm-block" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://search3.pontofrio.com.br/busca?q=wacom" target="_blank"><img class="img-responsive rounded" src="img/logos-brasil/pontofrio.jpg" width="150" style="margin:auto; display: flex; margin-top: 38%"></a>
+                                                </div>
+                                            </div>
+                                               <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas d-none d-sm-block" style="padding: 5%;">
+                                                <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
+                                                    <a href="https://buscando2.extra.com.br/busca?q=wacom" target="_blank"><img class="img-responsive rounded" src="img/logos-brasil/logo-extra.png" width="100" style="margin:auto; display: flex; margin-top: 8%"></a>
                                                 </div>
                                             </div>
                                         </div>
